Fix Lucene test cases. Solr still fails